# my-app

./: data.db  db.py  main.py  managecard.py  mmm.py  pyproject.toml  requirements.txt  speed_test.py  upload_pdf.py
